force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Status_FW__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Status_FW__c</fullName>
    <label>FW Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgc_sync__Device_Status</valueSetName>
    </valueSet>
</CustomField>