force-app/main/default/objects/cgc_sync__Sync_Mobile_App_Installation__c/fields/cgc_sync__Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>cgc_sync__Sync_Status__c</fullName>
    <description>Possible values are: 
        G—OK
        R—Error
        Y—Warning</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>